# looper

./: .clang-format  CMakeLists.txt  README.md  build.sh
.github/workflows/: build-release.yml
plugin/: CMakeLists.txt  Info.plist
plugin/source/: AudioToUIBridge.h  CircularBuffer.h  CopyJob.h  CustomStandalone.cpp  CustomStandaloneFilterWindow.h  IRenderer.h  LinearRenderer.h  LoopFifo.h  LoopLifo.h  LoopStack.h  LoopTrack.cpp  LoopTrack.h  LooperEngine.cpp  LooperEngine.h  LooperLookAndFeel.h  PerfettoProfiler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TrackComponent.cpp  TrackComponent.h  UndoBuffer.h  WaveformCache.h  WaveformComponent.cpp  WaveformComponent.h
plugin/source/audio/: AudioToUIBridge.h  EngineCommandBus.h  EngineStateToUIBridge.h  SelectionStateBridge.h  UIToEngineBridge.h
plugin/source/engine/: AutomationEngine.h  BufferManager.h  Constants.h  GranularFreeze.h  LevelMeter.h  LoopFifo.h  LoopLifo.h  LoopTrack.cpp  LoopTrack.h  LooperEngine.cpp  LooperEngine.h  LooperStateConfig.h  LooperStateMachine.h  Metronome.h  MidiCommandConfig.h  MidiCommandDispatcher.cpp  MidiCommandDispatcher.h  MidiMappingManager.h  NEXT_STEPS  PerformanceMonitor.h  PlaybackEngine.h  RecordManager.h  UndoBuffer.h  UndoManager.h  VolumeProcessor.h  midiMappings.h
plugin/source/profiler/: PerfettoProfiler.h
plugin/source/renderers/: CircularRenderer.h  IRenderer.h  LinearRenderer.h
plugin/source/themes/: tokyonight.h
plugin/source/themes/mixer/: MixerChannelComponent.h
plugin/source/ui/: ThemeFactory.h
plugin/source/ui/colors/: TokyoNight.h
plugin/source/ui/components/: AccentBarComponent.h  BeatIndicatorComponent.h  ButtonIconComponent.h  DraggableToggleButtonComponent.h  DraggableValueLabelComponent.h  FooterComponent.h  FreezeComponent.cpp  FreezeComponent.h  FreezeParameters.h  FreezeParametersPopup.h  GlobalBarComponent.h  LevelComponent.h  MeterWithGainComponent.h  MetronomeComponent.cpp  MetronomeComponent.h  MidiMappingComponent.cpp  MidiMappingComponent.h  PerformanceMonitorPopup.h  PlaybackPitchComponent.h  PlaybackSpeedComponent.cpp  PlaybackSpeedComponent.h  ProgressiveAutomationPopup.h  ProgressiveMetronomePopup.h  ProgressiveSpeedButton.h  ProgressiveSpeedPopup.h  TrackComponent.h  TrackEditComponent.h  TransportControlsComponent.h  VolumeKnobComponent.h  VolumesComponent.h  WaveformCache.h  WaveformComponent.cpp  WaveformComponent.h
plugin/source/ui/daw/: DawEditor.h  DawLookAndFeel.h  DawTrackComponent.h  PlaybackSlider.h  VolumesComponent.h
plugin/source/ui/editor/: DawLookAndFeel.h  LooperEditor.h
plugin/source/ui/helpers/: MidiCommandDispatcher.h  WaveformCache.h
plugin/source/ui/mixer/: MixerChannelComponent.h  StudioMixerEditor.h  StudioMixerLookAndFeel.h
plugin/source/ui/renderers/: CircularRenderer.h  IRenderer.h  LinearRenderer.h
plugin/source/ui/windows/: CpuMonitorWindow.h
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  CircularBuffer_test.cpp  LoopFifo_test.cpp  LoopLifo_test.cpp  LoopTrack_Backing_test.cpp  LoopTrack_Playback_test.cpp  LoopTrack_Recording_test.cpp  LoopTrack_Setup_test.cpp  LoopTrack_StateManagement_test.cpp  LoopTrack_TimeManagement_test.cpp  LoopTrack_test.cpp  LooperEngine_test.cpp  integration_test.cpp  unit_test.cpp
